fix style overlap error.

--- a/css/_videolayout_default.scss
+++ b/css/_videolayout_default.scss
@@ -299,10 +299,11 @@
 .videocontainer .displayname {
     pointer-events: none;
     padding: 0 3px 0 3px;
-    bottom: 3px;
+    bottom: 16px;
     top: unset;
     transform: none;
     font-size: 14px;
+    box-sizing: border-box;
 }
 
 .videocontainer .editdisplayname {
